<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/light_purple"
        android:textSize="70sp"
        android:textStyle="bold"
        android:fontFamily="roboto"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowColor="@color/dark_green"
        android:shadowRadius="10"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:background="@drawable/boarder"
        android:layout_margin="15dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@drawable/boarder"
        android:layout_margin="15dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/files"
        android:background="@drawable/boarder"
        android:layout_margin="15dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:background="@drawable/boarder"
        android:layout_margin="15dp"
        android:layout_gravity="center"/>
</LinearLayout>